--- a/index.html
+++ b/index.html
@@ -1,19 +1,113 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>CS Rajat Kumar Goyal</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Website Under Maintenance</title>
+
+    <!-- Meta Tags for SEO -->
+    <meta
+      name="description"
+      content="Our website is currently undergoing maintenance to serve you better. We’ll be back shortly. For assistance, please contact us."
+    />
+    <meta
+      name="keywords"
+      content="Website Maintenance, Contact Support, Scheduled Maintenance, Under Maintenance"
+    />
+    <meta name="author" />
+
+    <!-- Open Graph Meta Tags (for social media previews) -->
+    <meta property="og:title" content="Website Under Maintenance" />
+    <meta
+      property="og:description"
+      content="We’re improving our website to serve you better. Contact us if you need assistance."
+    />
+    <meta property="og:image" content="[URL-to-logo-or-image]" />
+    <meta property="og:url" content="[URL-of-your-website]" />
+    <meta property="og:type" content="website" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <style>
       body {
-        margin: 0px;
-        background-color: #f1c30f;
+        height: 100vh;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        text-align: center;
+        overflow-y: hidden;
+        background: linear-gradient(
+          to right,
+          rgb(212, 238, 212),
+          white,
+          rgb(212, 238, 212)
+        );
       }
-      img {
-        max-height: 100%;
-        object-fit: cover;
+      .content-container {
+        font-size: larger;
+      }
+      .logo {
+        max-width: 100px;
+        height: auto;
+      }
+      .image {
+        max-width: 350px;
+        width: 100%;
+        height: auto;
       }
     </style>
   </head>
   <body>
-    rdtfgyhujiko
-    <img width="100%" src="./maintenance.png" />
+    <main
+      class="container d-flex flex-column justify-space-around align-items-center"
+      aria-label="Under Maintenance Page"
+    >
+      <!-- Logo Section -->
+      <div class="d-flex justify-content-center align-items-center">
+        <img src="./images/logo.jpg" alt="Logo" class="logo my-3" />
+      </div>
+
+      <!-- Content Section -->
+      <section class="content-container">
+        <h1
+          style="
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+              sans-serif;
+          "
+        >
+          We’re Under Maintenance
+        </h1>
+        <p class="fw-normal lh-base" style="font-size: 18px; margin-top: 12px">
+          Our website is currently undergoing scheduled maintenance to serve you
+          better. We’ll be back shortly.<br />
+          If you need assistance, please contact us!<br />
+          <a
+            class="btn btn-success mt-3 fw-bold shadow-lg"
+            href="tel:+917976579454"
+            aria-label="Call us for assistance"
+            >Call us!</a
+          >
+        </p>
+      </section>
+
+      <!-- Image Section -->
+      <figure>
+        <img
+          src="./images/yoga-final.jpg"
+          alt="Illustration of maintenance work"
+          class="image"
+        />
+        <figcaption>
+          Our website will be back shortly. Thank you for your patience.
+        </figcaption>
+      </figure>
+    </main>
   </body>
 </html>
